--- a/CMSports/CMSportsObjects/CMSportsObjects.csproj
+++ b/CMSports/CMSportsObjects/CMSportsObjects.csproj
@@ -40,9 +40,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
+    <Compile Include="Club.cs" />
     <Compile Include="Contact.cs" />
+    <Compile Include="Event.cs" />
     <Compile Include="Organisation.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="School.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CMSportsObjects.cd" />
