--- a/CMSports/CMSportsObjects/CMSportsObjects.csproj
+++ b/CMSports/CMSportsObjects/CMSportsObjects.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Contact.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="Organisation.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Programme.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="School.cs" />
     <Compile Include="Validation.cs" />
